--- a/scss/style.scss
+++ b/scss/style.scss
@@ -237,7 +237,8 @@ h5,
         bottom: 0;
         width: 50%;
         opacity: 1;
-        background: $primary;
+        //background: $primary;
+        background: radial-gradient(circle, rgb(228, 213, 164) 0%, rgb(165, 147, 99) 100%);
         z-index: -1;
         @include media-breakpoint-down(md) {
             opacity: 0;
