--- a/css/style.css
+++ b/css/style.css
@@ -9904,13 +9904,18 @@ h5,
   }
 }
 @media (max-width: 1199.98px) {
-  .hero-wrap .slider-text .carousel-about {
+  .hero-wrap .slider-text .carousel-about, .hero-wrap .slider-text .no-carousel-about {
     position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
     height: auto;
     z-index: -1;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .hero-wrap .slider-text .carousel-about, .hero-wrap .slider-text .no-carousel-about {
+    display: none;
   }
 }
 .hero-wrap .slider-text .copyright {
