--- a/scss/style.scss
+++ b/scss/style.scss
@@ -334,7 +334,7 @@ h1 > .highlight {
                 margin-bottom: 5px;
             }
         }
-        .carousel-about {
+        .carousel-about, .no-carousel-about {
             @include media-breakpoint-down(xl) {
                 position: absolute;
                 left: 0;
@@ -342,6 +342,9 @@ h1 > .highlight {
                 bottom: 0;
                 height: auto;
                 z-index: -1;
+            }
+            @include media-breakpoint-only(md) {
+                display: none;
             }
         }
         .copyright {
