--- a/css/style.css
+++ b/css/style.css
@@ -9592,7 +9592,7 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.gradient-text, .dbox p span, .wrapper .social-media p a:hover, .blog-entry .text .theme, .resume-wrap span.position i, .resume-wrap h2, .resume-wrap .h2, .section-counter .number, .testimony-wrap .name, .heading-section.heading-section-white .subheading, .heading-section .subheading, .services .icon span, .hero-wrap .slider-text .subheading, .ftco-navbar-light .navbar-nav > .nav-item > .nav-link.active {
+.gradient-text, .dbox p span, .wrapper .social-media p a:hover, .blog-entry .text .theme, .resume-wrap span.position i, .resume-wrap h2, .resume-wrap .h2, .section-counter .number, .testimony-wrap .name, .heading-section.heading-section-white .subheading, .heading-section .subheading, .services .icon span, .hero-wrap .slider-text .subheading, .ftco-navbar-light .navbar-nav > .nav-item > .nav-link.active, a > i {
   background-image: -webkit-linear-gradient(108deg, #b16cea 8%, #ff5e69 40%, #ff8a56 77%, #ffa84b 91%);
   background-image: -moz-linear-gradient(108deg, #b16cea 8%, #ff5e69 40%, #ff8a56 77%, #ffa84b 91%);
   background-image: -ms-linear-gradient(108deg, #b16cea 8%, #ff5e69 40%, #ff8a56 77%, #ffa84b 91%);
@@ -9604,6 +9604,11 @@ textarea.form-control-lg {
   -ms-background-clip: text;
   -o-background-clip: text;
   background-clip: text;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 body {
@@ -10839,11 +10844,6 @@ textarea.form-control {
   -ms-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-@media (max-width: 575.98px) {
-  .project .overlay {
-    opacity: 0.2;
-  }
-}
 .project .text {
   max-width: 80%;
   z-index: 1;
@@ -10866,14 +10866,6 @@ textarea.form-control {
   letter-spacing: 2px;
   font-size: 12px;
   font-weight: 600;
-}
-@media (max-width: 575.98px) {
-  .project .text {
-    opacity: 1;
-  }
-  .project .text span {
-    color: rgba(255, 255, 255, 0.8);
-  }
 }
 .project:hover .overlay, .project:focus .overlay {
   opacity: 1;
@@ -10928,7 +10920,7 @@ textarea.form-control {
   font-weight: 400;
 }
 .blog-entry .text .heading a {
-  color: #3c3c3c;
+  color: #222222;
 }
 .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
   color: black;
@@ -10948,6 +10940,9 @@ textarea.form-control {
   font-weight: 600;
   letter-spacing: 2px;
 }
+.blog-single {
+  margin: auto;
+}
 .blog-single h2, .blog-single .h2 {
   font-size: 40px;
   line-height: 1.2;
@@ -10956,6 +10951,10 @@ textarea.form-control {
 .blog-single .head-title {
   font-weight: 600;
   font-size: 28px;
+}
+.blog-single img {
+  margin: auto;
+  display: block;
 }
 
 .block-27 ul {
